--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,12 @@
-# Binaries for programs and plugins
+main
+crawler
 *.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-
-# Test binary, built with `go test -c`
+*.log
+conf/*
+!conf/dev
+.idea/*
+.idea
+.vscode/*
+.vscode
+runtime/*
 *.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
