--- a/conf/dev/conf.toml
+++ b/conf/dev/conf.toml
@@ -4,9 +4,21 @@
     runMode = "debug"           # eg:debug eg:release eg:test
     readTimeout = 60
     writeTimeout = 60
-    apiPrefix = "v1"           # api前缀，一般为版本号,设置为后 api/{api_prefix}/resource
+    apiPrefix = ""           # api前缀，一般为版本号,设置为后 api/{api_prefix}/resource
     staticPath = "./static/"   # 静态路径,必须是绝对路径或相对于go build可执行文件
-    logDir    = "./runtime/logs/http"   # logs的目录
+    isCors = true
+    isNotRoute = true
+    isSwagger = true
+    isHttps = false
 
-[log]
-    baseDir = "./runtime/logs/logging"
+[service]
+    log = "./runtime/logs/service"
+
+
+[db]
+    isLog = true
+    port = 3306
+    addr = "127.0.0.1"
+    database = "saletoday"
+    username = "com1yema1mysq1ok"
+    password = "new1pwd1yema1ok1_"
