--- a/conf/base.toml
+++ b/conf/base.toml
@@ -5,3 +5,4 @@
     version = 1
     timeZone = "Asia/Shanghai" # 时区
     env = "dev"                # 环境仅允许本地 eg:dev eg:prod
+    log = "./runtime/logs/app"
